# easymoney

./: .gitignore  Dockerfile  Makefile  Pipfile  Procfile  alembic.ini  app.json  docker-compose.devel.yml  docker-compose.test.yml  docker-compose.yml  docker-stack.yml  heroku.yaml  heroku.yml  logconf.yaml  pyproject.toml  requirements.txt
backend/app/: .coveragerc  .gitignore  Dockerfile  Procfile  alembic.ini  main.py  newrelic.ini  prestart.sh  pyproject.toml  requirements.txt
backend/app/alembic/versions/: 5d892343f6a4_add_name_collum_on_expense_table.py  8e1220123fe0_add_expense_table.py
backend/app/api/v1/: api.py
backend/app/app/: config.py  main.py  verify_dependencies.py
backend/app/app/adapters/: __init__.py  expense_adapter.py
backend/app/app/adapters/expense/: expense_repository.py  fake_expense_repository.py
backend/app/app/adapters/repositories/: expense.py
backend/app/app/api/: routes.py
backend/app/app/api/resources/: __init__.py
backend/app/app/api/resources/expenses/: models.py  schemas.py  views.py
backend/app/app/core/ports/expenses/: expense_repository.py
backend/app/app/core/use_cases/: abstract_use_case.py
backend/app/app/core/use_cases/expenses/: expenses_use_case.py
backend/app/app/crud/: __init__.py  crud_expense.py
backend/app/app/db/: base_class.py  session.py
backend/app/app/domain/: expense.py
backend/app/app/entities/: expenses.py
backend/app/app/infrastructure/api/: dependencies.py  routes.py
backend/app/app/infrastructure/db/: base_crud.py  base_repository.py  session.py
backend/app/app/infrastructure/db/alembic/: env.py
backend/app/app/infrastructure/db/config/: session.py
backend/app/app/infrastructure/db/models/: base.py  expense.py
backend/app/app/interfaces/: use_case.py
backend/app/app/interfaces/adapters/: expense_adapter.py
backend/app/app/interfaces/repositories/: exceptions.py  expense_repository.py
backend/app/app/models/: expense.py
backend/app/app/repositories/expenses/: expense_repository.py  fake_expense_repository.py
backend/app/app/repositories/sqlalchemy/: expense_repository.py
backend/app/app/schemas/: __init__.py
backend/app/app/services/: exceptions.py  expense.py  unit_of_work.py
backend/app/app/services/tests/: conftest.py  test_expense_services.py
backend/app/app/use_cases/: abstract_use_case.py  expenses_use_case.py
backend/app/app/use_cases/tests/: conftest.py
backend/app/entities/: expenses.py
backend/app/entities/tests/: conftest.py
backend/app/infrastructure/api/: dependencies.py
backend/app/infrastructure/api/resources/expenses/: adapters.py  views.py
backend/app/infrastructure/db/adapters/: expenses.py
backend/app/infrastructure/db/alembic/: env.py
backend/app/infrastructure/db/config/: session.py
backend/app/infrastructure/db/models/: expense.py
backend/app/infrastructure/repositories/expense/: expense_repository.py
backend/app/interfaces/: use_case.py
backend/app/interfaces/repositories/: exceptions.py  expense_repository.py
backend/app/interfaces/use_cases/: expense_use_case.py
backend/app/repositories/sqlalchemy/: base_repository.py  expense_repository.py
backend/app/tests/: conftest.py
backend/app/tests/domain/: conftest.py
backend/app/tests/e2e/: conftest.py  test_api.py
backend/app/tests/entities/: conftest.py  test_expense_entity.py
backend/app/tests/integration/: conftest.py  test_repositories.py  test_repositoriy.py  test_uow.py
backend/app/tests/services/: test_expense_use_case.py
backend/app/tests/unit/: test_service.py  test_services.py  test_views.py
backend/app/tests/use_cases/: conftest.py  test_expense_use_case.py
backend/app/use_cases/: expenses_use_case.py
backend/app/use_cases/tests/: test_expense_use_case.py
(+95 files in other folders)
