[tool.poetry]
name = "easy_money"
version = "0.1.0"
description = "A API to record your expenses"
authors = ["Lievi Silva <lievi.silva@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.11.3"
fastapi = "^0.54.1"
python-multipart = "^0.0.5"
pydantic = "^1.4"
gunicorn = "^20.0.4"
sqlalchemy = "^1.3.16"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
psycopg2-binary = "^2.8.5"
ipdb = "^0.13.2"
rope = "^0.17.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
