[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.pyright]
deprecateTypingAliases = true

[tool.isort]
profile = "black"
line_length = 79

[tool.coverage.run]
omit = ["tests/*"]

[tool.poetry]
name = "easymoney"
version = "0.1.0"
description = ""
authors = ["Lievi Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
alembic = "==1.*"
httpx = "==0.*"
psycopg2-binary = "==2.*"
tenacity = "==8.*"
sqlmodel = "==0.0.*"
mypy = "*"
setuptools = "^68.1.2"
python-dotenv = "^1.0.0"
pydantic = "*"
gunicorn = "*"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "*"
isort = "*"
pytest = "*"
mock = "*"
pylint = "*"
requests = "*"
pytest-cov = "*"
pytest-xdist = "*"
mypy = "*"
pycodestyle = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
