[tool.poetry]
name = "easy_money"
version = "0.1.0"
description = "A API to record your expenses"
authors = ["Lievi Silva <lievi.silva@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0"
fastapi = "^0"
python-multipart = "^0.0.5"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}
gunicorn = "^20"
sqlalchemy = "^1"
alembic = "^1"
PyYAML = "^5.3.1"
psycopg2-binary = "^2.8.5"
newrelic = "^5.22.0.151"

[tool.poetry.dev-dependencies]
pytest = "^5"
mypy = "^0"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
psycopg2-binary = "^2.8.5"
ipdb = "^0.13.2"
rope = "^0.17.0"
mock = "^4.0.2"
coverage = "^5.2"
pylint = "^2.5.3"
bandit = "^1.6.2"
debugpy = "^1.2.1"
requests = "^2.25.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=1.1.14"]
build-backend = "poetry.masonry.api"
